--- a/package.json
+++ b/package.json
@@ -7,8 +7,14 @@
     "start": "parcel index.html --open",
     "build": "parcel build index.html"
   },
-  "dependencies": {},
+  "dependencies": {
+    "jest": "^26.6.3"
+  },
   "devDependencies": {
+    "@babel/core": "^7.13.10",
+    "@babel/preset-env": "^7.13.12",
+    "@babel/preset-typescript": "^7.13.0",
+    "babel-jest": "^26.6.3",
     "parcel-bundler": "^1.6.1"
   },
   "keywords": []
