--- a/package.json
+++ b/package.json
@@ -1,21 +1,17 @@
 {
   "name": "challenge-fizzbuzz",
-  "version": "1.0.0",
-  "description": "Write `fizzbuzz function`",
-  "main": "index.html",
+  "version": "2.0.0",
+  "description": "Write `fizzbuzz` function",
+  "main": "src/index.ts",
   "scripts": {
-    "start": "parcel index.html --open",
-    "build": "parcel build index.html"
-  },
-  "dependencies": {
-    "jest": "^26.6.3"
+    "test": "jest",
+    "test:watch": "jest --watchAll"
   },
   "devDependencies": {
+    "jest": "^26.6.3",
     "@babel/core": "^7.13.10",
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-typescript": "^7.13.0",
-    "babel-jest": "^26.6.3",
-    "parcel-bundler": "^1.6.1"
-  },
-  "keywords": []
+    "babel-jest": "^26.6.3"
+  }
 }
