--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "challenge-fizzbuzz",
   "version": "2.0.0",
   "description": "Write `fizzbuzz` function",
+  "license": "MIT",
   "main": "src/index.ts",
   "scripts": {
     "test": "jest",
